done backet history

--- a/lib/backet/b-1/index.pug
+++ b/lib/backet/b-1/index.pug
@@ -6,138 +6,216 @@ section.canhcam-backet-1
 			.col-lg-9
 				.info.mt-5.mt-lg-0
 					h1.antuong-title.upcase.text-center.main.mb-4 Giỏ hàng
-					.row.no-gutters
-						.col-md-6.col-lg-4
-							a.item(href="#")
-								figure
-									.boxzoom
-										img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-									figcaption
-										h5 Southgate Tower
-										p Địa chỉ: Quận 7, Hồ Chí Minh
-										p Giá: 
-											span 35 triệu - 36 triệu/m2
-									.status.d-flex
-										p Đang thi công
-										span Xem thêm
-											em.lnr.lnr-arrow-right.ml-3
-						.col-md-6.col-lg-4
-							a.item(href="#")
-								figure
-									.boxzoom
-										img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-									figcaption
-										h5 Southgate Tower
-										p Địa chỉ: Quận 7, Hồ Chí Minh
-										p Giá: 
-											span 35 triệu - 36 triệu/m2
-									.status.d-flex
-										.detail.d-flex
-											p
-												em.mr-2.fas.fa-expand-arrows-alt
-												| 90m
-												sup 2
-											p
-												em.mr-2.fas.fa-bed
-												| 2
-											p
-												em.mr-2.fas.fa-bath
-												| 2
-										span Xem thêm
-											em.lnr.lnr-arrow-right.ml-2
-						.col-md-6.col-lg-4
-							a.item(href="#")
-								figure
-									.boxzoom
-										img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-									figcaption
-										h5 Southgate Tower
-										p Địa chỉ: Quận 7, Hồ Chí Minh
-										p Giá: 
-											span 35 triệu - 36 triệu/m2
-									.status.d-flex
-										.detail.d-flex
-											p
-												em.mr-2.fas.fa-expand-arrows-alt
-												| 90m
-												sup 2
-											p
-												em.mr-2.fas.fa-bed
-												| 2
-											p
-												em.mr-2.fas.fa-bath
-												| 2
-										span Xem thêm
-											em.lnr.lnr-arrow-right.ml-2
-						.col-md-6.col-lg-4
-							a.item(href="#")
-								figure
-									.boxzoom
-										img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-									figcaption
-										h5 Southgate Tower
-										p Địa chỉ: Quận 7, Hồ Chí Minh
-										p Giá: 
-											span 35 triệu - 36 triệu/m2
-									.status.d-flex
-										.detail.d-flex
-											p
-												em.mr-2.fas.fa-expand-arrows-alt
-												| 90m
-												sup 2
-											p
-												em.mr-2.fas.fa-bed
-												| 2
-											p
-												em.mr-2.fas.fa-bath
-												| 2
-										span Xem thêm
-											em.lnr.lnr-arrow-right.ml-2
-						.col-md-6.col-lg-4
-							a.item(href="#")
-								figure
-									.boxzoom
-										img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-									figcaption
-										h5 Southgate Tower
-										p Địa chỉ: Quận 7, Hồ Chí Minh
-										p Giá: 
-											span 35 triệu - 36 triệu/m2
-									.status.d-flex
-										.detail.d-flex
-											p
-												em.mr-2.fas.fa-expand-arrows-alt
-												| 90m
-												sup 2
-											p
-												em.mr-2.fas.fa-bed
-												| 2
-											p
-												em.mr-2.fas.fa-bath
-												| 2
-										span Xem thêm
-											em.lnr.lnr-arrow-right.ml-2
-						.col-md-6.col-lg-4
-							a.item(href="#")
-								figure
-									.boxzoom
-										img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-									figcaption
-										h5 Southgate Tower
-										p Địa chỉ: Quận 7, Hồ Chí Minh
-										p Giá: 
-											span 35 triệu - 36 triệu/m2
-									.status.d-flex
-										.detail.d-flex
-											p
-												em.mr-2.fas.fa-expand-arrows-alt
-												| 90m
-												sup 2
-											p
-												em.mr-2.fas.fa-bed
-												| 2
-											p
-												em.mr-2.fas.fa-bath
-												| 2
-										span Xem thêm
-											em.lnr.lnr-arrow-right.ml-2
+					ul.nav.nav-tabs
+						li.active
+							a(data-toggle='tab', href='#home') Đề xuất cho bạn
+						li
+							a(data-toggle='tab', href='#menu1') Top Campaign
+						li
+							a(data-toggle='tab', href='#menu2') New Campaign
+					.tab-content
+						#home.tab-pane.fade.show.active
+							.row.no-gutters
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+						#menu1.tab-pane.fade
+							h3 Menu 1
+							p Some content in menu 1.
+						#menu2.tab-pane.fade
+							h3 Menu 2
+							p Some content in menu 2.
+					ul.nav.nav-tabs.tab-2
+						li.active
+							a(data-toggle='tab', href='#tab-1') Dự án cho thuê
+						li
+							a(data-toggle='tab', href='#tab-2') Nhà bán
+						li
+							a(data-toggle='tab', href='#tab-3') Nhà cho thuê
+					.tab-content
+						#tab-1.tab-pane.fade.show.active
+							.row.no-gutters
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+						#tab-2.tab-pane.fade
+							h3 Menu 1
+							p Some content in menu 1.
+						#tab-3.tab-pane.fade
+							h3 Menu 2
+							p Some content in menu 2.
+					
