--- a/lib/history/h-1/index.pug
+++ b/lib/history/h-1/index.pug
@@ -4,43 +4,136 @@ section.canhcam-history-1
 			.col-lg-3
 				include ../../nav/n-8/history.pug
 			.col-lg-9
-				.table-result.mt-5.mt-lg-0
-					h1.antuong-title.upcase.mb-4.main lịch sử giao dịch
-					table.table
-						thead
-							tr
-								th(scope="col") STT
-								th(scope="col") Tên dự án
-								th(scope="col") Ngày đăng ký
-								th(scope="col") Trạng thái
-						tbody
-							tr
-								th(scope="row") 01
-								td Đất nền Gold Hill
-								td 24/10/199
-								td Đang chào bán
-							tr
-								th(scope="row") 01
-								td Đất nền Gold Hill
-								td 24/10/199
-								td Đang chào bán
-							tr
-								th(scope="row") 01
-								td Đất nền Gold Hill
-								td 24/10/199
-								td Đang chào bán
-							tr
-								th(scope="row") 01
-								td Đất nền Gold Hill
-								td 24/10/199
-								td Đang chào bán
-							tr
-								th(scope="row") 01
-								td Đất nền Gold Hill
-								td 24/10/199
-								td Đang chào bán
-							tr
-								th(scope="row") 01
-								td Đất nền Gold Hill
-								td 24/10/199
-								td Đang chào bán
+				.content
+					.table-result.mt-4.mt-lg-0
+						h1.antuong-title.upcase.mb-4.main lịch sử giao dịch
+						table.table
+							thead
+								tr
+									th(scope="col") STT
+									th(scope="col") Tên dự án
+									th(scope="col") Ngày đăng ký
+									th(scope="col") Trạng thái
+							tbody
+								tr
+									th(scope="row") 01
+									td Đất nền Gold Hill
+									td 24/10/199
+									td Đang chào bán
+								tr
+									th(scope="row") 01
+									td Đất nền Gold Hill
+									td 24/10/199
+									td Đang chào bán
+								tr
+									th(scope="row") 01
+									td Đất nền Gold Hill
+									td 24/10/199
+									td Đang chào bán
+								tr
+									th(scope="row") 01
+									td Đất nền Gold Hill
+									td 24/10/199
+									td Đang chào bán
+								tr
+									th(scope="row") 01
+									td Đất nền Gold Hill
+									td 24/10/199
+									td Đang chào bán
+								tr
+									th(scope="row") 01
+									td Đất nền Gold Hill
+									td 24/10/199
+									td Đang chào bán
+					.step.mt-5
+						h2.antuong-title.upcase.mb-0.main giao dịch đang xử lý
+						.info
+							.project.d-sm-flex.text-center.text-sm-left
+								.detail
+									h5 Southgate Tower
+									p Ngày đăng ký: 20/07/2018
+									p Hoa hồng dự án: 1%
+								a.btn.btn-cancel(href='#').mt-4.mt-sm-0
+									em.lnr.lnr-cross.mr-3
+									| Huỷ giao dịch
+							.status
+								h5.title Tình trạng đơn hàng
+								.step-detail.row.no-gutters
+									.col
+										.box.text-center.active
+											.number 1
+											p.mb-0.d-none.d-md-block Đã tiếp nhận
+									.col
+										.box.text-center.active
+											.number 2
+											p.mb-0.d-none.d-md-block Đã gọi cho khách hàng
+									.col
+										.box.text-center.active
+											.number 3
+											p.mb-0.d-none.d-md-block Phản hồi của khách hàng Đang cân nhắc
+									.col
+										.box.text-center
+											.number 4
+											p.mb-0.d-none.d-md-block Phản hồi khách hàng Đã hẹn lịch xem nhà mẫu
+									.col
+										.box.text-center
+											.number 5
+											p.mb-0.d-none.d-md-block Đã đặt cọc
+									.col
+										.box.text-center
+											.number 6
+											p.mb-0.d-none.d-md-block Đã HĐ mua dự án
+									.col
+										.box.text-center
+											.number 7
+											p.mb-0.d-none.d-md-block Hoàn tất mua thành công 
+									.col
+										.box.text-center
+											.number 8
+											p.mb-0.d-none.d-md-block Kết thúc đơn hàng
+						.info
+							.project.d-sm-flex.text-center.text-sm-left
+								.detail
+									h5 Southgate Tower
+									p Ngày đăng ký: 20/07/2018
+									p Hoa hồng dự án: 1%
+								a.btn.btn-cancel(href='#').mt-4.mt-sm-0
+									em.lnr.lnr-cross.mr-3
+									| Huỷ giao dịch
+							.status
+								h5.title Tình trạng đơn hàng
+								.step-detail.row.no-gutters
+									.col
+										.box.text-center.active
+											.number 1
+											p.mb-0.d-none.d-md-block Đã tiếp nhận
+									.col
+										.box.text-center.active
+											.number 2
+											p.mb-0.d-none.d-md-block Đã gọi cho khách hàng
+									.col
+										.box.text-center.active
+											.number 3
+											p.mb-0.d-none.d-md-block Phản hồi của khách hàng Đang cân nhắc
+									.col
+										.box.text-center
+											.number 4
+											p.mb-0.d-none.d-md-block Phản hồi khách hàng Đã hẹn lịch xem nhà mẫu
+									.col
+										.box.text-center
+											.number 5
+											p.mb-0.d-none.d-md-block Đã đặt cọc
+									.col
+										.box.text-center
+											.number 6
+											p.mb-0.d-none.d-md-block Đã HĐ mua dự án
+									.col
+										.box.text-center
+											.number 7
+											p.mb-0.d-none.d-md-block Hoàn tất mua thành công 
+									.col
+										.box.text-center
+											.number 8
+											p.mb-0.d-none.d-md-block Kết thúc đơn hàng
+				.note
+					p.mb-0 Để thanh toán, doanh thu của Publisher chỉ cần đạt tối thiểu hạn mức 1.000.000 VNĐ/1 kỳ thanh toán. Nhadattructuyen sẽ cộng dồn vào tháng tiếp theo nếu chưa đủ hạn mức thanh toán.
