--- a/lib/nav/n-3/index.pug
+++ b/lib/nav/n-3/index.pug
@@ -7,3 +7,5 @@ section.canhcam-nav-3
 						a.active(href="#") Bán
 					li
 						a(href="#") Cho thuê
+					li
+						a(href="#") Bán & Cho thuê với NDTT
