--- a/lib/nav/n-8/index.pug
+++ b/lib/nav/n-8/index.pug
@@ -7,3 +7,42 @@
 		a.item(href='./statistical.html') Báo cáo thông kê
 		a.item(href='#') Đổi mật khẩu
 		a.item(href='#') Hướng dẫn sử dụng
+	.detail.row
+		.col-sm-6.col-lg-12.item
+			.box
+				figure
+					.icon
+						em.mdi.mdi-cash-usd
+					figcaption
+						h5 Tổng hoa hồng
+						h3.number  0đ
+						p.mb-0 Tăng % trong tháng
+		.col-sm-6.col-lg-12.item
+			.box
+				figure
+					.icon
+						em.mdi.mdi-account-plus
+					figcaption
+						h5 Số lượng thành viên
+						h3.number  01
+						p.mb-0 Hãy 
+							a(href="#") chia sẻ 
+							| để tăng thêm thu nhập
+		.col-sm-6.col-lg-12.item
+			.box
+				figure
+					.icon
+						em.mdi.mdi-home
+					figcaption
+						h5 Số lượng BĐS đã bán
+						h3.number  1
+						p.mb-0 Tăng 0% trong tháng
+		.col-sm-6.col-lg-12.item
+			.box
+				figure
+					.icon
+						em.mdi.mdi-account-box
+					figcaption
+						h5 Số lượng khách hàng
+						h3.number  5
+						p.mb-0 Tăng 0% trong tháng
