--- a/lib/information/i-1/index.pug
+++ b/lib/information/i-1/index.pug
@@ -4,7 +4,7 @@ section.canhcam-information-1
 			.col-lg-3
 				include ../../nav/n-8/index.pug
 			.col-lg-9
-				.info.mt-5.mt-md-0
+				.info
 					h1.antuong-title.upcase.text-center.main.mb-4.mb-lg-5 thông tin cá nhân
 					.row.justify-content-center
 						.col-md-10
