--- a/lib/backet/b-1/index.sass
+++ b/lib/backet/b-1/index.sass
@@ -67,3 +67,95 @@ section.canhcam-backet-1
 							color: color-get($mau,trang)
 							background: color-get($mau,main)
 							transition: .3s all ease-in-out
+.modal
+	+pos(abs, 50% null null 50%)
+	background: color-get($mau,trang)
+	transform: translate(-50%, -50%)
+	min-width: 90%
+	+pad(2rem)
+	min-height: 420px
+	overflow-y: auto
+	.modal-body
+		
+		+pad(0)
+		.modal-info
+			.img
+			.detail
+				margin-top: 1rem
+				
+				h4
+					+fz(1.5rem)
+					+fw(600)
+					margin-bottom: 1rem
+				p
+					display: flex
+					+fw(400)
+					color: #666666
+					em
+						color: color-get($mau,main)
+						+fz(1.2rem)
+						+lh(1.2rem)
+				.button-wrap
+					a.btn-ctv
+						background: #ebebeb
+						color: #333333
+						margin-right: 1rem
+						margin-bottom: 1rem
+						&:hover
+							background:color-get($mau,extra)
+						&:last-child
+							margin-right: 0
+	.modal-form
+		margin-top: 1rem
+		.form
+			margin-top: 2.5rem
+			.form-group
+				label
+					+fw(400)
+				textarea, input
+					background: #f8f8f8
+					border: 1px solid darken(color-get($mau,trang),20%)
+				button
+					background: color-get($mau,extra)
+					color: color-get($mau,text-1)
+					border: 0
+					+pad(null 4rem)
+					+fw(500)
+	
+					
+	a.close
+		
+		position: absolute
+		top: .5rem!important
+		right: .3rem!important
+		em
+			color: color-get($mau, den)
+	a.close-modal
+		display: none
+	+media-breakpoint-up(sm)
+		.modal-body
+			.modal-info
+				.detail
+					margin-left: 2rem
+	+media-breakpoint-up(md)
+		+pad(3rem)
+		min-height: 750px
+		a.close
+			top: 1rem!important
+			right: 1rem!important
+		.modal-form
+			.small-title
+				+fz(1.5rem)
+				+fw(600)
+				text-align: center
+			+pad(null 3rem)
+			.form
+				.form-group
+					label
+						width: 30%
+						margin-bottom: 0
+	+media-breakpoint-up(lg)
+		min-width: 900px
+		.modal-body
+			.modal-form
+				+pad(null 8rem)
