--- a/lib/backet/b-1/index.pug
+++ b/lib/backet/b-1/index.pug
@@ -28,7 +28,23 @@ section.canhcam-backet-1
 													span 35 triệu - 36 triệu/m2
 												p.bonus
 													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
+													i.mdi.mdi-map-marker
+													| Đặt chỗ
+												
+								.col-md-6.col-lg-4
+									.item
+										figure
+											.img
+												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
+											figcaption
+												h5 Southgate Tower
+												p Địa chỉ: Quận 7, Hồ Chí Minh
+												p Giá: 
+													span 35 triệu - 36 triệu/m2
+												p.bonus
+													| Hoa hồng: 2%
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
 													i.mdi.mdi-map-marker
 													| Đặt chỗ
 								.col-md-6.col-lg-4
@@ -43,7 +59,7 @@ section.canhcam-backet-1
 													span 35 triệu - 36 triệu/m2
 												p.bonus
 													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
 													i.mdi.mdi-map-marker
 													| Đặt chỗ
 								.col-md-6.col-lg-4
@@ -58,7 +74,7 @@ section.canhcam-backet-1
 													span 35 triệu - 36 triệu/m2
 												p.bonus
 													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
 													i.mdi.mdi-map-marker
 													| Đặt chỗ
 								.col-md-6.col-lg-4
@@ -73,7 +89,7 @@ section.canhcam-backet-1
 													span 35 triệu - 36 triệu/m2
 												p.bonus
 													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
 													i.mdi.mdi-map-marker
 													| Đặt chỗ
 								.col-md-6.col-lg-4
@@ -88,22 +104,7 @@ section.canhcam-backet-1
 													span 35 triệu - 36 triệu/m2
 												p.bonus
 													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
-													i.mdi.mdi-map-marker
-													| Đặt chỗ
-								.col-md-6.col-lg-4
-									.item
-										figure
-											.img
-												img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-											figcaption
-												h5 Southgate Tower
-												p Địa chỉ: Quận 7, Hồ Chí Minh
-												p Giá: 
-													span 35 triệu - 36 triệu/m2
-												p.bonus
-													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
 													i.mdi.mdi-map-marker
 													| Đặt chỗ
 						#menu1.tab-pane.fade
@@ -134,7 +135,7 @@ section.canhcam-backet-1
 													span 35 triệu - 36 triệu/m2
 												p.bonus
 													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
 													i.mdi.mdi-map-marker
 													| Đặt chỗ
 								.col-md-6.col-lg-4
@@ -149,7 +150,7 @@ section.canhcam-backet-1
 													span 35 triệu - 36 triệu/m2
 												p.bonus
 													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
 													i.mdi.mdi-map-marker
 													| Đặt chỗ
 								.col-md-6.col-lg-4
@@ -164,7 +165,7 @@ section.canhcam-backet-1
 													span 35 triệu - 36 triệu/m2
 												p.bonus
 													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
 													i.mdi.mdi-map-marker
 													| Đặt chỗ
 								.col-md-6.col-lg-4
@@ -179,7 +180,7 @@ section.canhcam-backet-1
 													span 35 triệu - 36 triệu/m2
 												p.bonus
 													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
 													i.mdi.mdi-map-marker
 													| Đặt chỗ
 								.col-md-6.col-lg-4
@@ -194,7 +195,7 @@ section.canhcam-backet-1
 													span 35 triệu - 36 triệu/m2
 												p.bonus
 													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
 													i.mdi.mdi-map-marker
 													| Đặt chỗ
 								.col-md-6.col-lg-4
@@ -209,7 +210,7 @@ section.canhcam-backet-1
 													span 35 triệu - 36 triệu/m2
 												p.bonus
 													| Hoa hồng: 2%
-												a.btn-default.text-uppercase(href="#")
+												a.btn-default.text-uppercase(href="#login-form" rel="modal:open")
 													i.mdi.mdi-map-marker
 													| Đặt chỗ
 						#tab-2.tab-pane.fade
@@ -218,4 +219,55 @@ section.canhcam-backet-1
 						#tab-3.tab-pane.fade
 							h3 Menu 2
 							p Some content in menu 2.
-					
+#login-form.modal
+	a.close(href="#close-modal" rel='modal:close')
+		em.mdi.mdi-window-close
+	.modal-body
+		.modal-info.d-md-flex
+			.img
+				img.w-100(src="./img/antuong/project/project_1.png", alt="")
+			.detail
+				h4 La Cosmo
+				p
+					em.mdi.mdi-map-marker.mr-3
+					| Địa chỉ: Quận Tân Bình, Hồ Chí Minh
+				p.prince
+					em.mdi.mdi-cash-usd.mr-3
+					| 45 triệu - 50 triệu/m2
+				p
+					em.mdi.mdi-wallet.mr-3
+					| Hoa hồng cho CTV trực tiếp: 5%
+					br
+					| Hoa hồng cho CTV gián tiếp: 8%
+				p
+					em.mdi.mdi-marker-check.mr-3
+					| Sản phẩm đang được 3 người giữ chỗ
+				p
+					em.mdi.mdi-account.mr-3
+					| Bạn muốn làm CTV
+				.button-wrap
+					a(href="#").btn.btn-ctv
+						img(src="./img/antuong/backet/icon_1.png", alt="").mr-3
+						| Trực tiếp
+					a(href="#").btn.btn-ctv
+						img(src="./img/antuong/backet/icon_2.png", alt="").mr-3
+						| Giao tiếp
+		.modal-form
+			h5.small-title Thông tin khách hàng cần mua sản phẩm
+			.form
+				.form-group.d-md-flex.justify-content-between.align-item-center
+					label Tên đăng nhập
+					input.form-control(type='text')
+				.form-group.d-md-flex.justify-content-between.align-item-center
+					label Email
+					input.form-control(type='text')
+				.form-group.d-md-flex.justify-content-between.align-item-center
+					label Số điện thoại *
+					input.form-control(type='text')
+				.form-group.d-md-flex.justify-content-between.align-item-center
+					label Ghi chú
+					textarea.form-control
+				.form-group.d-md-flex.justify-content-between.align-item-center
+					label Mã xác nhận
+				.form-group.text-center
+					button.form-control.text-uppercase(type='submit').w-auto.mx-auto Gửi thông tin
