--- a/lib/nav/n-8/backet.pug
+++ b/lib/nav/n-8/backet.pug
@@ -7,6 +7,8 @@
 		a.item(href='./statistical.html') Báo cáo thông kê
 		a.item(href='#') Đổi mật khẩu
 		a.item(href='#') Hướng dẫn sử dụng
+		a.item(href='./customer.html') Thông tin khách hàng 
+		a.item(href='./introduce.html') Thành viên giới thiệu
 	.detail.row
 		.col-sm-6.col-lg-12.item
 			.box
