--- a/lib/backet/b-1/index.pug
+++ b/lib/backet/b-1/index.pug
@@ -219,7 +219,7 @@ section.canhcam-backet-1
 						#tab-3.tab-pane.fade
 							h3 Menu 2
 							p Some content in menu 2.
-#login-form.modal
+#login-form.modal.scrollbar.scrollbar-primary
 	a.close(href="#close-modal" rel='modal:close')
 		em.mdi.mdi-window-close
 	.modal-body
@@ -245,13 +245,490 @@ section.canhcam-backet-1
 				p
 					em.mdi.mdi-account.mr-3
 					| Bạn muốn làm CTV
-				.button-wrap
-					a(href="#").btn.btn-ctv
-						img(src="./img/antuong/backet/icon_1.png", alt="").mr-3
-						| Trực tiếp
-					a(href="#").btn.btn-ctv
-						img(src="./img/antuong/backet/icon_2.png", alt="").mr-3
-						| Giao tiếp
+		.button-wrap
+			a(href="#").btn.btn-ctv
+				img(src="./img/antuong/backet/icon_1.png", alt="").mr-3
+				| Trực tiếp
+			a(href="#").btn.btn-ctv
+				img(src="./img/antuong/backet/icon_2.png", alt="").mr-3
+				| Giao tiếp
+		.modal-table
+			h5.small-title.mb-4 Chọn căn hộ
+			table.table-responsive.table-bordered
+				thead
+					tr
+						th(style='width: 8%') Căn hộ
+						th 1
+						th 2
+						th 3
+						th 4
+						th 5
+						th 6
+						th 7
+						th 8
+						th 9
+						th 10
+				tbody
+					tr
+						th 1
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+					tr
+						th 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+					tr
+						th 3
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+					tr
+						th 4
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+					tr
+						th 5
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
+						th
+							.box
+								p.mb-0.code 01C303
+								.info
+									em.mr-2.fas.fa-utensils
+									| 3
+								.info
+									em.mr-2.fas.fa-utensils
+									| 2
 		.modal-form
 			h5.small-title Thông tin khách hàng cần mua sản phẩm
 			.form
