--- a/lib/news-details/n-1/index.sass
+++ b/lib/news-details/n-1/index.sass
@@ -2,7 +2,11 @@
 //////////////////////////////////////
 // CODE
 //////////////////////////////////////
-
+.banner-ads
+	height: 1000px
+	.banner-content
+		width: 300px
+		+mar(null auto)
 .canhcam-news-details-1
 	+pad(2rem 0)
 	+media-breakpoint-up(lg)
