--- a/lib/_core/index.sass
+++ b/lib/_core/index.sass
@@ -247,3 +247,23 @@ figure
 			img
 				transform: scale(1.1)
 				transition: .3s ease-in-out
+.scrollbar
+	margin-left: 30px
+	float: left
+	height: 300px
+	width: 65px
+	background: #fff
+	overflow-y: scroll
+	margin-bottom: 25px
+
+.force-overflow
+	min-height: 450px
+
+.scrollbar-primary
+	&::-webkit-scrollbar
+		width: 5px
+		background-color: #F5F5F5
+	&::-webkit-scrollbar-thumb
+		border-radius: 10px
+		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1)
+		background-color: #4285F4
