--- a/lib/backet/b-1/index.sass
+++ b/lib/backet/b-1/index.sass
@@ -75,6 +75,10 @@ section.canhcam-backet-1
 	+pad(2rem)
 	min-height: 420px
 	overflow-y: auto
+	.small-title
+		+fz(1.5rem)
+		+fw(600)
+		text-align: center
 	.modal-body
 		
 		+pad(0)
@@ -95,34 +99,57 @@ section.canhcam-backet-1
 						color: color-get($mau,main)
 						+fz(1.2rem)
 						+lh(1.2rem)
-				.button-wrap
-					a.btn-ctv
-						background: #ebebeb
-						color: #333333
-						margin-right: 1rem
-						margin-bottom: 1rem
-						&:hover
-							background:color-get($mau,extra)
-						&:last-child
-							margin-right: 0
-	.modal-form
-		margin-top: 1rem
-		.form
-			margin-top: 2.5rem
-			.form-group
-				label
-					+fw(400)
-				textarea, input
-					background: #f8f8f8
-					border: 1px solid darken(color-get($mau,trang),20%)
-				button
-					background: color-get($mau,extra)
-					color: color-get($mau,text-1)
-					border: 0
-					+pad(null 4rem)
-					+fw(500)
-	
+		.modal-table
+			+mar(1rem null 3rem)
+			table
+				tr
+					th
+						vertical-align: middle
+						text-align: center
+						+fw(400)
+				thead
+					tr
+						th
+							+pad(1rem null)
+							background: color-get($mau,main)
+							color: color-get($mau,trang)
+				tbody
 					
+					tr
+						th
+							background: color-rgba(color-get($mau,main),.1)
+							.info
+								+fz(.8rem)
+					tr
+						th
+							&:first-child
+								background: color-get($mau,main)
+								color: color-get($mau,trang)
+		.button-wrap
+			text-align: center
+			a.btn-ctv
+				background: #ebebeb
+				color: #333333
+				margin-right: 1rem
+				margin-bottom: 1rem
+				&:last-child
+					margin-right: 0
+		.modal-form
+			margin-top: 1rem
+			.form
+				margin-top: 2.5rem
+				.form-group
+					label
+						+fw(400)
+					textarea, input
+						background: #f8f8f8
+						border: 1px solid darken(color-get($mau,trang),20%)
+					button
+						background: color-get($mau,extra)
+						color: color-get($mau,text-1)
+						border: 0
+						+pad(null 4rem)
+						+fw(500)
 	a.close
 		
 		position: absolute
@@ -139,15 +166,12 @@ section.canhcam-backet-1
 					margin-left: 2rem
 	+media-breakpoint-up(md)
 		+pad(3rem)
-		min-height: 750px
+		min-height: 550px
 		a.close
 			top: 1rem!important
 			right: 1rem!important
 		.modal-form
-			.small-title
-				+fz(1.5rem)
-				+fw(600)
-				text-align: center
+			
 			+pad(null 3rem)
 			.form
 				.form-group
