--- a/lib/nav/n-8/history.pug
+++ b/lib/nav/n-8/history.pug
@@ -1,4 +1,4 @@
-.section.canhcam-nav-8(data-fix="80", data-fix-type="initial", data-fix-change="sticky")
+.section.canhcam-nav-8
 
 	.menu-list
 		a.item(href='./information.html') Thông tin cá nhân
