--- a/templates/_layout/layout.pug
+++ b/templates/_layout/layout.pug
@@ -40,4 +40,5 @@ html(dir='ltr', lang=config.SEO.seo_lang, itemscope, itemtype="http://schema.org
 		<!-- ////////////// Javascript Include ////////////// -->
 		include ../_include/_script
 		block js
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollToFixed/1.0.8/jquery-scrolltofixed-min.js')
 
